--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
     "zod": "^3.25.36"
   },
   "devDependencies": {
